# ebay_to_buy

./: .gitignore  CLAUDE.md  IMPLEMENTATION-PLAN.md  LOGIC-CHANGES-purchase-feed.md  docker-compose.yml  purchase-logic.yaml
.github/workflows/: deploy.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
backend/ebay_to_buy_backend/: cli.py  config.py  db.py  errors.py  excel.py  main.py  search.py
backend/samples/: make_samples.py
data_import/: article_to_smart.csv  lost_comments.txt  lost_listings.txt  targets_to_import.xlsx  unique_codes_deduped_marked.xlsx  unmatched.txt
db/: README.md  main.sql
frontend/: .dockerignore  Dockerfile  package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/_components/: ActiveSelect.tsx  ContactError.tsx  CopyChip.tsx  Dropdown.tsx  EbayCell.tsx  ErrorBox.tsx  ListingForm.tsx  OverviewControls.tsx  OverviewTable.tsx  SmartSearch.tsx  SortableHeader.tsx  TargetForm.tsx  ThemeToggle.tsx  overviewColumns.ts
frontend/app/_lib/: api.ts  clipboard.ts  contactKeys.ts  contactStore.ts  filters.ts  types.ts
frontend/app/needed/: page.tsx
frontend/app/targets/[smart_part_id]/: page.tsx
frontend/app/targets/new/: page.tsx
