[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.12,<3.14"
dependencies = [
    "asyncpg>=0.30,<0.31",
    "fastapi>=0.115,<0.116",
    "lxml>=5",
    "openpyxl>=3.1,<3.2",
    "pydantic>=2.6",
    "python-dotenv>=1.0",
    "python-multipart>=0.0.9",
    "typer>=0.25,<0.26",
    "uvicorn[standard]>=0.32",
]

[project.scripts]
ebay-to-buy = "ebay_to_buy_backend.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ebay_to_buy_backend"]
